--- a/Mango.Services.ProductAPI/appsettings.json
+++ b/Mango.Services.ProductAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MangoProductAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\.;Database=MangoProductAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
