--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -1,9 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ServiceUrls": {
+        "ProductAPI":  "https://localhost:44390/"
+    }
 }
