--- a/.gitignore
+++ b/.gitignore
@@ -284,3 +284,5 @@ resources
 /wwwroot/node_modules
 
 # End of https://www.toptal.com/developers/gitignore/api/dotnetcore,aspnetcore
+
+/course-resources
