mango practices update

--- a/Mango.Services.ProductAPI/appsettings.json
+++ b/Mango.Services.ProductAPI/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "UrlAuthentication": "https://localhost:7228/",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\.;Database=MangoProductAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
