--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -7,7 +7,9 @@
     }
   },
     "AllowedHosts": "*",
-    "ServiceUrls": {
-        "ProductAPI": "https://localhost:7187"
-    }
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7187",
+    "IdentityAPI": "https://localhost:7228"
+
+  }
 }
